v7.0.1/_sources/generated/pcdsdevices.pim.IM2K0.rst.txt
pcdsdevices.pim.IM2K0
=====================

.. currentmodule:: pcdsdevices.pim

.. autoclass:: IM2K0

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - target
          - :class:`~pcdsdevices.pim.LCLS2Target`
          - ``:MMS:STATE``
          - Control of the diagnostic stack via saved positions.
          - hinted
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS``
          - Direct control of the diagnostic stack motor.
          - normal
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - detector
          - :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
          - ``:CAM:``
          - Area detector settings and readbacks.
          - normal
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - cam_power
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:CAM:PWR``
          - Camera power supply controls.
          - config
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - led
          - :class:`~pcdsdevices.pim.XPIMLED`
          - ``:CIL``
          - LED for viewing the reticle.
          - config
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: y_states
    
    